Se agrego la interfaz de usuario

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="dato-flex">
                 <button onclick="getLocation()" title="Activar ubicación"><i class="fas fa-map-marker-alt"></i> </button>
-                <a href="#" title="Iniciar sesión"><i class="fas fa-user-circle"></i>  </a>
+                <a href="interfaz.html" title="Iniciar sesión"><i class="fas fa-user-circle"></i>  </a>
             
             </div>
 
